--- a/style/main-page.css
+++ b/style/main-page.css
@@ -36,7 +36,8 @@
 
 .logo-wrapper h1 a {
     color: #F1CDB3;
-    font-family: 'Gelasio', Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    font-weight: 400;
     text-decoration: none;
     font-size: 2.5vw;
     letter-spacing: 0.06em;
@@ -179,7 +180,8 @@
 }
 
 .our-friends-card h3 {
-    font-family: 'Georgia';
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 1.56vw;
     line-height: 23px;
     letter-spacing: 0.06em;
@@ -192,7 +194,8 @@
     margin: 8px 0 25px 0;
     border: 2px solid #F1CDB3;
     border-radius: 100px;
-    font-family: 'Georgia';
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 1.33vw;
     line-height: 130%;
     letter-spacing: 0.06em;
@@ -251,7 +254,8 @@
 
 .help-icons-wrapper figcaption {
     padding-top: 30px;
-    font-family: 'Georgia';
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 1.56vw;
     line-height: 115%;
     letter-spacing: 0.06em;
@@ -288,7 +292,8 @@
     border-radius: 9px;
     display: flex;
     align-items: center;
-    font-family: 'Georgia';
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 1.56vw;
     letter-spacing: 0.06em;
     color: #545454;
@@ -296,7 +301,8 @@
 }
 
 .bank-name {
-    font-family: 'Georgia';
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 1.17vw;
     line-height: 110%;
     letter-spacing: 0.06em;
